# open-post-production

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  INGEST.md  LICENSE  NOTICE.md  README.md
editor/: editor_README.md  project.py  pyproject.toml  sidecar_cut_eval.py
editor/graphics/: graphics_README.md
editor/queries/: __init__.py  _paths.py  beat_coverage_report.py  beat_select_ranker.py  cli.py  compose.py  cut_audit.py  encoder.py  filters.py  queries_README.md  queries_SCHEMA.md  retrieval.py  source_window.py  store.py  transcript.py  usage.py  visual.py
editor/story/: __init__.py  editor_story_README.md  resources.py
editor/story/_resources/: manifest.json
editor/story/_sidecar scripts/: _build_story_filters.py  build_resolver.py  build_story_brief.py  correct_transcripts.py  make_act_sidecar.py  make_beat_sidecar.py  qa_sidecar.py  reconcile_sidecar.py  refresh_act_sidecar.py  render_sidecar_html.py  render_sidecar_html_2col.py  validate_sidecar.py  validate_xml_structure.py
editor/story/html views/: sample_2col.html  sample_story_brief.md
editor/story/sidecars/: sample.sidecar.json  sample_beats_manifest.json  sidecars_README.md
editor/xml exports/: xml_README.md
editor/xml exports/_scripts/: _diagnose_resolver_gaps.py  _inspect_window.py  _inventory_stubs.py  _pproticks.py  _scripts_README.md  clean_audio_cuts.py  ingest_premiere_export.py  insert_video_clips.py  preflight_xml_diff.py  replace_scene_in_act.py  rewrite_pathurls_minimal.py  set_sequence_format.py
editor/xml exports/scene_workspace/: _build_scene_sample.py  scene_sample.v1.xml  (+1 more)
(+204 files in other folders)
